force-app/main/default/objects/Activity/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <formula>TEXT(Account__r.Account_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Category</label>
    <type>Text</type>
</CustomField>