force-app/main/default/objects/Activity/fields/Category_Of_Task__c.field-meta.xml
<CustomField>
    <fullName>Category_Of_Task__c</fullName>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting with Doctor</fullName>
            </value>
            <value>
                <fullName>Call with Doctor</fullName>
            </value>
            <value>
                <fullName>Email Doctor</fullName>
            </value>
            <value>
                <fullName>Meeting with Hospital Head</fullName>
            </value>
            <value>
                <fullName>Visit to Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>