force-app/main/default/objects/Activity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>