force-app/main/default/objects/Activity/fields/Due_Date_Comments__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Comments__c</fullName>
    <label>Due Date Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>