force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outcome related to the task</description>
    <label>Outcome</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>