force-app/main/default/objects/Activity/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>