force-app/main/default/objects/Activity/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task Category</label>
    <referenceTo>Task_Master__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>